--- a/refer-javascript/javascriptRefer05.html
+++ b/refer-javascript/javascriptRefer05.html
@@ -366,6 +366,12 @@
                             <td class="sample05_R10 result"></td>
                         </tr>
                         <tr>
+                            <td class="sample05_N11"></td>
+                            <td class="sample05_Q11"></td>
+                            <td class="sample05_M11"></td>
+                            <td class="sample05_R11 result"></td>
+                        </tr>
+                        <tr>
                             <td class="sample05_N12"></td>
                             <td class="sample05_Q12"></td>
                             <td class="sample05_M12"></td>
