--- a/refer-effect/mouseEffect/javascriptME01.html
+++ b/refer-effect/mouseEffect/javascriptME01.html
@@ -89,20 +89,20 @@
 
     <!-- info -->
     <div class="info">
-        <h1><a href="index.html">Mouse Effect01 - jQuery</a></h1>
+        <h1><a href="index.html">Mouse Effect01 - javascript</a></h1>
         <p>메뉴 이펙트 - 마우스 따라가기</p>
     </div>
 
     <div class="info right">
         <ul>
-            <li><a href="javascriptME01.html">1</a></li>
+            <li class="active"><a href="javascriptME01.html">1</a></li>
             <li><a href="javascriptME02.html">2</a></li>
             <li><a href="javascriptME03.html">3</a></li>
             <li><a href="javascriptME04.html">4</a></li>
             <li><a href="javascriptME05.html">5</a></li>
         </ul>
         <ul>
-            <li class="active"><a href="jqueryMe01.html">1</a></li>
+            <li><a href="jqueryMe01.html">1</a></li>
             <li><a href="jqueryMe02.html">2</a></li>
             <li><a href="jqueryMe03.html">3</a></li>
             <li><a href="jqueryMe04.html">4</a></li>
