--- a/refer-effect/sliderEffect/index.html
+++ b/refer-effect/sliderEffect/index.html
@@ -21,11 +21,20 @@
     <nav>
         <ul id="nav">
             <li><a href="../index.html">MAIN</a></li>
-            <li><a href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">4</a></li>
-            <li><a href="#">5</a></li>
+            <ul id="nav">
+                <li><a href="javascriptSE01.html">1</a></li>
+                <li><a href="javascriptSE02.html">2</a></li>
+                <li><a href="javascriptSE03.html">3</a></li>
+                <li><a href="javascriptSE04.html">4</a></li>
+                <li><a href="javascriptSE05.html">5</a></li>
+            </ul>
+            <ul id="nav">
+                <li><a href="jquerySE01.html">1</a></li>
+                <li><a href="jquerySE02.html">2</a></li>
+                <li><a href="jquerySE03.html">3</a></li>
+                <li><a href="jquerySE04.html">4</a></li>
+                <li><a href="jquerySE05.html">5</a></li>
+            </ul>
         </ul>
     </nav>
 
