--- a/site/testType04.html
+++ b/site/testType04.html
@@ -19,13 +19,13 @@
     <!--메뉴바-->
     <main class="menubar">
         <div class="menu">
-            <div class="lg"></div>
+            <h1 class="lg"></h1>
             <div>Why We Whale</div>
-            <div>가이드</div>
-            <div>스토어</div>
-            <div>연구소</div>
-            <div>웨일 스페이스</div>
-            <div>웨일북</div>
+                <div>가이드</div>
+                <div>스토어</div>
+                <div>연구소</div>
+                <div>웨일 스페이스</div>
+                <div>웨일북</div>
             <div class="menu-bt">다운로드</div>
         </div>
     </main>
@@ -182,11 +182,28 @@
             </div>
         </div>
 
+        <div class="bottom-dw">
+            <div class="banner-img">
+                <img src="img/whywewhale.gif" alt="이미지">
+            </div>
+            <button>다운로드</button>
+        </div>
     </section>
 
-
-
-
+    <footer>
+        <div class="footer-img">
+            <div><img src="img/logo_whale.svg" alt=""></div>
+            <ul>
+                <li>이용약관</li>
+                <li>개인정보 처리방침</li>
+                <li>Naver Whale 개인정보 보호를 위한 백서</li>
+                <li>제휴 제안</li>
+                <li>고객센터</li>
+                <li>© NAVER Corp.</li>
+            </ul>
+            <p class="go_beta"><a>베타 다운로드</a></p>
+        </div>
+    </footer>
 
 </body>
 </html>
