--- a/refer-effect/gameEffect/index.html
+++ b/refer-effect/gameEffect/index.html
@@ -21,11 +21,11 @@
     <nav>
         <ul id="nav">
             <li><a href="../index.html">MEIN</a></li>
-            <li><a href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">4</a></li>
-            <li><a href="#">5</a></li>
+            <li><a href="../gameEffect/quiz/quiz01.html">1</a></li>
+            <li><a href="../gameEffect/quiz/quiz02.html">2</a></li>
+            <li><a href="../gameEffect/quiz/quiz03.html">3</a></li>
+            <li><a href="../gameEffect/quiz/quiz04.html">4</a></li>
+            <li><a href="../gameEffect/quiz/quiz05.html">5</a></li>
         </ul>
     </nav>
 
