--- a/refer-effect/gameEffect/quiz/quiz03.html
+++ b/refer-effect/gameEffect/quiz/quiz03.html
@@ -269,6 +269,7 @@
             position: relative;
             width: 360px;
             margin: 30px auto;
+            display: none;
             }
         .dog .head,
         .dog .body {
@@ -756,7 +757,6 @@
                     questionAnswerConfirm.style.display = "none";
                     questionAnswerView.style.display = "block";
                     questionAnswerView.innerHTML = "정답입니다.";
-
                 } else {
                     //alert("틀렸습니다.");
                     questionAnswerConfirm.style.display = "none";
