--- a/refer-effect/gameEffect/quiz/web20100711.html
+++ b/refer-effect/gameEffect/quiz/web20100711.html
@@ -913,10 +913,10 @@
             quizNum : 20,
             quizAsk : "다음 ( )안에 알맞은 용어는?<br>[보통 보라에서부터 빨강까지의 파장은 380nm에서 780nm의 범위이며, 이 범위는 우리 눈으로 관찰할 수 있기 때문에 이를 (  )이라 한다.]",
             quizChoice : {
-                1: "방향의 착시",
-                2: "대비의 착시",
-                3: "분할의 착시",
-                4: "길이의 착시"
+                1: "감마선",
+                2: "적외선",
+                3: "자외선",
+                4: "가시광선"
             },
             quizAnswer : 4,
             quizEx : "해설이 아직 작성되지 않았습니다."
