20211001문제오류수정
수정

--- a/refer-effect/gameEffect/quiz/quiz02.html
+++ b/refer-effect/gameEffect/quiz/quiz02.html
@@ -786,11 +786,11 @@
     //     })
     // })
 
-    questionAnswerConfirm.forEach((el,idx)=>{
+    questionAnswerConfirm.forEach((el,i)=>{
         el.addEventListener("click",function(){
             this.style.display = "none";
             this.nextElementSibling.style.display = "block";
-            document.querySelectorAll('.card')[idx].classList.add('good');
+            document.querySelectorAll('.card')[i].classList.add('good');
         })
     })
 
