--- a/refer-effect/gameEffect/quiz/web20100711.html
+++ b/refer-effect/gameEffect/quiz/web20100711.html
@@ -1033,10 +1033,10 @@
             quizNum : 30,
             quizAsk : "다음이 설명하고 있는 웹 페이지 저작도구는?<br>[멀티미디어와 애니메이션 제작을 위한 드로잉 전문 프로그램, 벡터 방식의 그래픽 처리를 통해 그래픽 파일의 크기를 최적화할 수 있고 웹상에서 실시간 전송 및 재생되는 스트리밍 기법을 통한 빠른 속도를 제공, 다른 멀티미디어 저작도구와 달리plug-in없이도 ActiveX, java 기술을 이용하여 실행 가능한 특징을 가지고 있음]",
             quizChoice : {
-                1: "F8",
-                2: "F9",
-                3: "F10",
-                4: "F11"
+                1: "드림위버",
+                2: "자바스크립트",
+                3: "플래시",
+                4: "포토샵"
             },
             quizAnswer : 3,
             quizEx : "해설이 아직 작성되지 않았습니다."
