--- a/refer-effect/gameEffect/quiz/quiz02.html
+++ b/refer-effect/gameEffect/quiz/quiz02.html
@@ -790,7 +790,7 @@
         el.addEventListener("click",function(){
             this.style.display = "none";
             this.nextElementSibling.style.display = "block";
-            document.querySelectorAll('.card')[i].classList.add('good');
+            document.querySelectorAll(".card")[i].classList.add("good");
         })
     })
 
