--- a/refer-jquery/jqueryRefer03.html
+++ b/refer-jquery/jqueryRefer03.html
@@ -125,9 +125,13 @@
             </thead>
             <tbody>
                 <tr>
-                    <td class="center" rowspan="5">Attributes</td>
-                    <td>.attr()</td>
+                    <td class="center" rowspan="6">Attributes</td>
+                    <td rowspan="2">.attr()</td>
+                    <td>setAttribute()</td>
                     <td>-</td>
+                </tr>
+                <tr>
+                    <td>setAttribute()</td>
                     <td>-</td>
                 </tr>
                 <tr>
