--- a/project/login/join.html
+++ b/project/login/join.html
@@ -21,15 +21,15 @@
                 <ul>
                     <li><a href="#">문제풀기</a></li>
                     <li><a href="#">기출문제</a></li>
-                    <li><a href="review/review.html">시험후기</a></li>
-                    <li><a href="notice/qna.html">Q&A</a></li>
-                    <li><a href="notice/notice.html">공지사항</a></li>
+                    <li><a href="../review/review.html">시험후기</a></li>
+                    <li><a href="../notice/qna.html">Q&A</a></li>
+                    <li><a href="../notice/notice.html">공지사항</a></li>
                 </ul>
             </nav>
             <div class="member">
                 <ul>
-                    <li><a href="login/login.html">로그인</a></li>
-                    <li><a href="login/join.html">회원가입</a></li>
+                    <li><a href="login.html">로그인</a></li>
+                    <li><a href="join.html">회원가입</a></li>
                 </ul>
             </div>
         </div>
@@ -64,12 +64,12 @@
                             <div>
                                 <label for="youEmail">이메일</label>
                                 <input type="email" name="youEmail" id="youEmail" class="input_write" placeholder="Sample@naver.com" autocmplete="off" autofocus>
-                                <button class="btn_sb" type="submit">중복 확인</button>
+                                <button class="btn_sb" type="button">중복 확인</button>
                             </div>
                             <div>
                                 <label for="youName">닉네임</label>
                                 <input type="text" name="youName" id="youName" class="input_write" maxlength="5" placeholder="닉네임 입력" autocmplete="off" required>
-                                <button class="btn_sb" type="submit">중복 확인</button>
+                                <button class="btn_sb" type="button">중복 확인</button>
                             </div>
                             <div>
                                 <label for="youName">이름</label>
