--- a/project/login/login.html
+++ b/project/login/login.html
@@ -21,15 +21,15 @@
                 <ul>
                     <li><a href="#">문제풀기</a></li>
                     <li><a href="#">기출문제</a></li>
-                    <li><a href="review/review.html">시험후기</a></li>
-                    <li><a href="notice/qna.html">Q&A</a></li>
-                    <li><a href="notice/notice.html">공지사항</a></li>
+                    <li><a href="../review/review.html">시험후기</a></li>
+                    <li><a href="../notice/qna.html">Q&A</a></li>
+                    <li><a href="../notice/notice.html">공지사항</a></li>
                 </ul>
             </nav>
             <div class="member">
                 <ul>
-                    <li><a href="login/login.html">로그인</a></li>
-                    <li><a href="login/join.html">회원가입</a></li>
+                    <li><a href="login.html">로그인</a></li>
+                    <li><a href="join.html">회원가입</a></li>
                 </ul>
             </div>
         </div>
