--- a/refer-effect/mouseEffect/javascriptME05.html
+++ b/refer-effect/mouseEffect/javascriptME05.html
@@ -83,7 +83,7 @@
 
     <!-- info -->
     <div class="info">
-        <h1><a href="index.html">Mouse Effect05 - jQuery</a></h1>
+        <h1><a href="index.html">Mouse Effect05 - javascript</a></h1>
         <p>마우스 이펙트 - 마우스 따라 움직이기</p>
     </div>
 
