--- a/site/testType06.html
+++ b/site/testType06.html
@@ -79,5 +79,12 @@
             </footer>
         </div>
     </section>
+    <script>
+        document.querySelectorAll("bord_tite tite_n").forEach((e)=>{
+            e.addEventListener("click",()=>{
+                this.classList.toggle = "show";
+            })
+        })
+    </script>
 </body>
 </html>
