20211008오늘꺼업로드
열심히했다

--- a/project/login/joinCheck.html
+++ b/project/login/joinCheck.html
@@ -19,6 +19,7 @@
         <div class="container">
             <nav class="menu">
                 <ul>
+                    <li><a href="../pages/index.html">홈으로</a></li>
                     <li><a href="#">문제풀기</a></li>
                     <li><a href="#">기출문제</a></li>
                     <li><a href="../review/review.html">시험후기</a></li>
@@ -42,9 +43,9 @@
                 <div class="joCk_box">
                     <h2>정신머리 사이트 회원가입이<br><em> 완료되었습니다!</em></h2>
                     <p>저희 사이트에 방문해주셔서 감사합니다.<br>지금부터 문제풀기와 제출, 시험 후기 등 사이트를 이용하실 수 있습니다.</p>
-                <img src="../assets/img/login_img.png" alt="이미지">
-            </div>
-            <button><a href="../index.html">홈으로</a></button>
+                    <img src="../assets/img/login_img.png" alt="이미지">
+                </div>
+                <button><a href="../index.html">홈으로</a></button>
             </div>
         </div>
     </main>
