--- a/project/login/login.html
+++ b/project/login/login.html
@@ -19,6 +19,7 @@
         <div class="container">
             <nav class="menu">
                 <ul>
+                    <li><a href="../pages/index.html">홈으로</a></li>
                     <li><a href="#">문제풀기</a></li>
                     <li><a href="#">기출문제</a></li>
                     <li><a href="../review/review.html">시험후기</a></li>
@@ -45,11 +46,13 @@
                         <div class="member-box">
                             <div>
                                 <label for="youEmail">ID</label>
-                                <input type="email" name="youEmail" id="youEmail" class="input_write" placeholder="Sample@naver.com" autocmplete="off" autofocus>
+                                <input type="email" name="youEmail" id="youEmail" class="input_write"
+                                    placeholder="Sample@naver.com" autocmplete="off" autofocus>
                             </div>
                             <div>
                                 <label for="youPass">PW</label>
-                                <input type="password" name="youPass" id="youPass" class="input_write" maxlength="20" placeholder="비밀번호 입력" autocmplete="off" required>
+                                <input type="password" name="youPass" id="youPass" class="input_write" maxlength="20"
+                                    placeholder="비밀번호 입력" autocmplete="off" required>
                             </div>
                         </div>
                         <button>로그인</button>
