--- a/project/review/review.html
+++ b/project/review/review.html
@@ -19,6 +19,7 @@
         <div class="container">
             <nav class="menu">
                 <ul>
+                    <li><a href="../pages/index.html">홈으로</a></li>
                     <li><a href="#">문제풀기</a></li>
                     <li><a href="#">기출문제</a></li>
                     <li><a href="../review/review.html">시험후기</a></li>
@@ -163,7 +164,7 @@
                     <li><a href="#">5</a></li>
                     <li><a href="#">&gt;</a></li>
                 </ul>
-                <a href="../board/boardWrite.php" class="form-btn black">글쓰기</a>
+                <a href="../review/reviewWrite.html" class="form-btn black">글쓰기</a>
             </div>
         </div>
     </main>
