--- a/refer-effect/sliderEffect/jquerySE06.html
+++ b/refer-effect/sliderEffect/jquerySE06.html
@@ -20,25 +20,24 @@
             width: 100%;
         }
         .slider-img {
-            width: 600px;
-            height: 360px;
+            position: absolute;
+            left: 50%; top: 50%;
+            transform: translate(-50%, -50%);
+            width: 800px;
             overflow: hidden;
-            margin: 10px;
         }
 
         .slider-inner {
             position: relative;
-            width: 600px;
-            height: 1800px;
+            /* width: 4000px; */
             overflow: hidden;
         }
 
         .slider {
             float: left;
-            width: 600px;
-            height: 360px;
+            width: 800px;
+            height: 480px;
             position: relative;
-            overflow: hidden;
         }
         
         .slider::before {
@@ -55,6 +54,58 @@
         .slider:nth-child(4){z-index: 2;}
         .slider:nth-child(5){z-index: 1;}
         .slider::before {content: attr(data-name);}
+
+        .slider-btn a {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            z-index: 1000;
+            width: 50px;
+            height: 50px;
+            background: rgba(0,0,0,.4);
+            text-align: center;
+            line-height: 50px;
+            transition: all 0.2s;
+            display: block;
+            color: #fff;
+            text-decoration: none;
+        }
+
+        .slider-btn a:hover {
+            background: rgba(241,96,86,1);
+        }
+
+        .slider-btn .prev {
+            left: 0;
+        }
+        .slider-btn .next {
+            right: 0;
+        }
+
+        .slider-dot {
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            bottom: 20px;
+        }
+        .slider-dot .dot {
+            width: 20px;
+            height: 20px;
+            background: rgba(0,0,0,.4);
+            display: inline-block;
+            border-radius: 50%;
+            transition: all 0.3s;
+            text-indent: -9999px;
+            margin: 3px;
+        }
+        .slider-dot .dot.active {
+            width: 20px;
+            height: 20px;
+            background: rgba(255,255,255,.4);
+            display: inline-block;
+            border-radius: 50%;
+        }
+
     </style>
 </head>
 <body class="bg bg7 brown">
@@ -62,23 +113,25 @@
     <!-- contents -->
     <main>
         <div class="slider-wrap">
-            <div class="slider-img slider_img1">
-                <div class="slider-inner slider-inner1">
-                    <div class="slider slider1" data-name="이미지1"><img src="../assets/img/bg04.jpg" alt="이미지1"></div>
-                    <div class="slider slider1" data-name="이미지2"><img src="../assets/img/bg06.jpg" alt="이미지2"></div>
-                    <div class="slider slider1" data-name="이미지3"><img src="../assets/img/bg08.jpg" alt="이미지3"></div>
-                    <div class="slider slider1" data-name="이미지4"><img src="../assets/img/bg09.jpg" alt="이미지4"></div>
-                    <div class="slider slider1" data-name="이미지5"><img src="../assets/img/bg010.jpg" alt="이미지5"></div>
+            <div class="slider-img">
+                <div class="slider-inner">
+                    <div class="slider" data-name="이미지1"><img src="../assets/img/bg04.jpg" alt="이미지1"></div>
+                    <div class="slider" data-name="이미지2"><img src="../assets/img/bg08.jpg" alt="이미지2"></div>
+                    <div class="slider" data-name="이미지3"><img src="../assets/img/bg09.jpg" alt="이미지3"></div>
+                    <div class="slider" data-name="이미지4"><img src="../assets/img/bg03.jpg" alt="이미지4"></div>
+                    <div class="slider" data-name="이미지5"><img src="../assets/img/bg010.jpg" alt="이미지5"></div>
                 </div>
             </div>
-            <div class="slider-img slider_img2">
-                <div class="slider-inner slider-inner2">
-                    <div class="slider slider2" data-name="이미지1"><img src="../assets/img/bg04.jpg" alt="이미지1"></div>
-                    <div class="slider slider2" data-name="이미지2"><img src="../assets/img/bg06.jpg" alt="이미지2"></div>
-                    <div class="slider slider2" data-name="이미지3"><img src="../assets/img/bg08.jpg" alt="이미지3"></div>
-                    <div class="slider slider2" data-name="이미지4"><img src="../assets/img/bg09.jpg" alt="이미지4"></div>
-                    <div class="slider slider2" data-name="이미지5"><img src="../assets/img/bg010.jpg" alt="이미지5"></div>
-                </div>
+            <div class="slider-btn">
+                <a href="#" class="prev">prev</a>
+                <a href="#" class="next">next</a>
+            </div>
+            <div class="slider-dot">
+                <!-- <a href="#" class="dot active">1</a>
+                <a href="#" class="dot">2</a>
+                <a href="#" class="dot">3</a>
+                <a href="#" class="dot">4</a>
+                <a href="#" class="dot">5</a> -->
             </div>
         </div>
     </main>
@@ -86,8 +139,8 @@
 
     <!-- info -->
     <div class="info">
-        <h1><a href="index.html">slider Effect04 - jQuery</a></h1>
-        <p>이미지 슬라이드 - 상단 슬라이드</p>
+        <h1><a href="index.html">slider Effect06 - jQuery</a></h1>
+        <p>이미지 슬라이드 - 닷메뉴 추가</p>
     </div>
 
     <div class="info right">
@@ -97,13 +150,15 @@
             <li><a href="javascriptSE03.html">3</a></li>
             <li><a href="javascriptSE04.html">4</a></li>
             <li><a href="javascriptSE05.html">5</a></li>
+            <li><a href="javascriptSE06.html">6</a></li>
         </ul>
         <ul>
             <li><a href="jquerySE01.html">1</a></li>
             <li><a href="jquerySE02.html">2</a></li>
             <li><a href="jquerySE03.html">3</a></li>
-            <li class="active"><a href="jquerySE04.html">4</a></li>
+            <li><a href="jquerySE04.html">4</a></li>
             <li><a href="jquerySE05.html">5</a></li>
+            <li class="active"><a href="jquerySE06.html">6</a></li>
         </ul>
     </div>
     <!-- //info -->
@@ -250,35 +305,56 @@
     <script src="../assets/js/custom.js"></script>
     <script src="../assets/js/highlight.min.js"></script>
     <script>
-        //sample1
-        const sliderImg1 = $(".slider-img1");
-        const sliderInner1 = $(".slider-inner1");
-        const slider1 = $(".slider1");
+        const sliderInner = $(".slider-inner");
+        const slider = $(".slider");
+        const sliderBtn = $(".slider-btn");
+        const sliderDot = $(".slider-dot");
 
-        let currentIndex1 = 0;
-        let sliderHeight1 = slider1.height();
+        let sliderCount = slider.length;
+        let sliderWidth = slider.width();
+        sliderTotalWidth = sliderWidth * sliderCount;
+        let currentIndex = 0;
+        let dotIndex = "";
 
-        setInterval(function(){
-            currentIndex1 < 4 ? currentIndex1++ : currentIndex1 = 0;
+        //이미지 가로값 세팅
+        sliderInner.css({ width: sliderTotalWidth });
+        slider.css({ width: sliderWidth });
 
-            let sliderPostion = currentIndex1 * -sliderHeight1;
-            sliderInner1.animate({ top: sliderPostion }, 600, "easeOutExpo")
-        }, 3000);
+        //이미지 움직이기
+        function gotoSlider(num){
+            sliderInner.animate({ left: -sliderWidth * num },400, "easeInQuart");
+            currentIndex = num;
+            sliderDot.find("a").removeClass("active").eq(currentIndex).addClass("active");
+        }
 
-        //sample2
-        const sliderImg2 = $(".slider-img2");
-        const sliderInner2 = $(".slider-inner2");
-        const slider2 = $(".slider2");
+        //닷 버튼 클릭하기
+        sliderDot.on("click","a", function(e){
+            e.preventDefault();
+            gotoSlider($(this).index());
+        })
 
-        let currentIndex2 = 0;
-        let sliderHeight2 = slider2.height();
+        //닷 버튼 생성
+        //이미지 갯수만큼 닷 메뉴생성
+        slider.each(function(index){
+            dotIndex += "<a href='#' class='dot'>" + index + "</a>";
+        });
+        sliderDot.html(dotIndex);
+        sliderDot.find("a").eq(currentIndex).addClass("active");
 
-        setInterval(function(){
-            sliderInner2.animate({ top: -sliderHeight2 },600, "easeOutExpo", function(){
-                $(".slider2:first-child").appendTo(sliderInner2);
-                sliderInner2.css("Top","");
-            })
-        }, 3000);
+        //버튼 클릭하기
+        sliderBtn.click(function(){});
+        sliderBtn.on("click","a", function(e){
+            e.preventDefault();
+            let nextIndex = ( currentIndex +1 ) % sliderCount;
+            let prevIndex = ( currentIndex -1 ) % sliderCount;
+            if(currentIndex == 0 ) prevIndex = sliderCount - 1;
+
+            if( $(this).hasClass("prev") ){
+                gotoSlider(prevIndex);
+            } else {
+                gotoSlider(nextIndex);
+            }
+        });
 
     </script>
 </body>
