--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
 
                     <!-- box -->
                     <section class="color-shape reference">
-                        <a href="site-php/pages/main.html" target="_blank">
+                        <a href="http://mybhar.dothome.co.kr/site-php/pages/main.php" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
                                     <span class="overlay-img-donut">php</span>
