--- a/refer-effect/sliderEffect/javascriptSE04.html
+++ b/refer-effect/sliderEffect/javascriptSE04.html
@@ -111,7 +111,7 @@
 
 
     <!-- modal 했던 부분 -->
-    <div class="info bottom">
+    <div class="source">
         <button>소스 보기</button>
     </div>
     <div id="example" class="ex">
