--- a/refer-javascript/test.html
+++ b/refer-javascript/test.html
@@ -1,32 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>테스트</title>
-</head>
-<body>
-   <script>
-       function func(data, exp){
-           let result = 1;
-           for( i=0; i<exp; i++){
-               result = result * data
-            }
-            document.write(result);
-        }
-        func(2,5);
-
-        document.write("<br>")
-
-           let result = 2;
-           for( i=0; i<5; i++){
-               result = result * 2
-               document.write(result,"<br>");
-           }
-       
-
-
-   </script>
-</body>
-</html>
+&lt;main&&gt;
+    &lt;div class="slider-wrap"&&gt;
+        &lt;div class="slider-img"&&gt;
+            &lt;div class="slider" data-name="이미지1"&&gt;&lt;img src="../assets/img/bg01.jpg" alt="이미지1"&&gt;&lt;/div&&gt;
+            &lt;div class="slider" data-name="이미지2"&&gt;&lt;img src="../assets/img/bg02.jpg" alt="이미지2"&&gt;&lt;/div&&gt;
+            &lt;div class="slider" data-name="이미지3"&&gt;&lt;img src="../assets/img/bg03.jpg" alt="이미지3"&&gt;&lt;/div&&gt;
+            &lt;div class="slider" data-name="이미지4"&&gt;&lt;img src="../assets/img/bg04.jpg" alt="이미지4"&&gt;&lt;/div&&gt;
+            &lt;div class="slider" data-name="이미지5"&&gt;&lt;img src="../assets/img/bg07.jpg" alt="이미지5"&&gt;&lt;/div&&gt;
+        &lt;/div&&gt;
+    &lt;/div&&gt;
+&lt;/main&&gt;
