--- a/refer-effect/mouseEffect/index.html
+++ b/refer-effect/mouseEffect/index.html
@@ -26,6 +26,8 @@
             <li><a href="javascriptME03.html">3</a></li>
             <li><a href="javascriptME04.html">4</a></li>
             <li><a href="javascriptME05.html">5</a></li>
+            <li><a href="javascriptME06.html">6</a></li>
+            <li><a href="javascriptME07.html">7</a></li>
         </ul>
         <ul id="nav">
             <li><a href="../index.html">MAIN</a></li>
@@ -34,6 +36,8 @@
             <li><a href="jqueryME03.html">3</a></li>
             <li><a href="jqueryME04.html">4</a></li>
             <li><a href="jqueryME05.html">5</a></li>
+            <li><a href="jqueryME06.html">6</a></li>
+            <li><a href="jqueryME07.html">7</a></li>
         </ul>
     </nav>
 
